Erro de ortografia

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Agenda</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<h1>Agenda sua tarefa!</h1>
+<h1>Agende sua tarefa!</h1>
 
 <body>
     <input id="tarefa" type="text" placeholder="Insira aqui sua tarefa"></input>
